tests/NormalTests/paczka1/fuzzy1/94429765.err
Error in line 18: A63 S260 40,1
Error in line 23: A63 S496 96,5
Error in line 28: qbd5s A63 75,7
Error in line 32: AKP6P S496 33,5
